
syntax = "proto3";

package network;

service NodeNetwork {
    // blockchainを同期する
    rpc SyncChain (MinerInfo) returns (ChainInfo);
    // トランザクションを取得する
    rpc GetTransaction (MinerInfo) returns (Transactions);
    // 採掘結果を公開する
    rpc PublishResult (stream MinerInfo) returns (stream Broadcast) {}
}

message MinerInfo {
    bytes data = 1;
}

message ChainInfo {
    bytes data = 1;
}

message Transactions {
    bytes data = 1;
}

message MiningInfo {
    bytes data = 1;
}

message Broadcast {
    bytes transactions = 1;
    int64 nonce = 2;
    string miner = 3;
}